--- a/.github/workflows/causality.yml
+++ b/.github/workflows/causality.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             pip install --upgrade microprediction
+            pip install --upgrade tigramite
             pip install matplotlib
       - name: Run causality.py 
         env:
