--- a/.github/workflows/causality_15.yml
+++ b/.github/workflows/causality_15.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip
+            pip install --upgrade cython
             pip install --upgrade microprediction
             pip install --upgrade tigramite
             pip install matplotlib
