--- a/.github/workflows/groups.yml
+++ b/.github/workflows/groups.yml
@@ -6,14 +6,14 @@
 # 4. Creates plots and other artifacts
 # 5. Checks everything back into the master branch 
 
-name: Groups at 6 22 34 51
+name: Groups on 19
 
 on:
   schedule:
     # How often do you want to fit your model? 
     # Public github accounts get 2000 minutes / month 
     # * is a special character in YAML so you have to quote this string
-    - cron:  '6,22,34,43,51,55 * * * *'
+    - cron:  '*/19 * * * *'
 
 defaults:
   run:
